# SAMP-Mirror-Single

./: .gitignore  CMakeLists.txt  MirrorSync.sln - Ярлык.lnk
source/: BaseType.cpp  BaseType.h  DataBase.cpp  DataBase.h  EventManager.cpp  EventManager.h  GameLogic.cpp  GameLogic.h  GameObject_List.cpp  GameObject_List.h  Logic.cpp  Logic.h  MyUtiles.cpp  MyUtiles.h  PackageRules.h  PackageType.h  PlayerManager.cpp  PlayerManager.h  RandString.cpp  RandString.h  VehicleManager.cpp  VehicleManager.h  async_server.cpp  compute.cpp  compute.h  dataAnswer.cpp  dataAnswer.h  error.txt  main.cpp  mutex_simple.cpp  sender.cpp  sender.h  server.cpp  server.h  udpserver.cpp  udpserver.h
source.bcp/: main.cpp  udpserver.cpp  udpserver.h
